--- a/package.json
+++ b/package.json
@@ -1,7 +1,35 @@
 {
-  "name": "vite-template-solid",
+  "name": "primer-solid",
   "version": "0.0.0",
-  "description": "",
+  "description": "An implementation of GitHub's Primer Design System using React",
+  "main": "lib/index.js",
+  "module": "lib-esm/index.js",
+  "exports": {
+    ".": {
+      "import": "./lib-esm/index.js",
+      "require": "./lib/index.js"
+    },
+    "./drafts": {
+      "import": "./lib-esm/drafts/index.js",
+      "require": "./lib/drafts/index.js"
+    },
+    "./deprecated": {
+      "import": "./lib-esm/deprecated/index.js",
+      "require": "./lib/deprecated/index.js"
+    },
+    "./lib-esm/*": {
+      "import": [
+        "./lib-esm/*.js",
+        "./lib-esm/*/index.js"
+      ],
+      "require": [
+        "./lib/*.js",
+        "./lib/*/index.js"
+      ]
+    }
+  },
+  "typings": "lib/index.d.ts",
+  "sideEffects": false,
   "scripts": {
     "start": "vite",
     "dev": "vite",
@@ -10,7 +38,9 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@primer/octicons": "^17.9.0",
     "@types/chroma-js": "^2.1.4",
+    "@types/node": "^18.11.9",
     "chroma-js": "^2.4.2",
     "solid-styled-components": "^0.28.5",
     "typescript": "^4.9.3",
@@ -21,6 +51,7 @@
     "@github/combobox-nav": "^2.1.5",
     "@github/markdown-toolbar-element": "^2.1.1",
     "@github/paste-markdown": "^1.4.2",
+    "@primer/behaviors": "^1.3.1",
     "@primer/css": "^20.6.0",
     "@primer/primitives": "7.10.0",
     "@solidjs/router": "^0.5.0",
